--- a/package.json
+++ b/package.json
@@ -1,16 +1,8 @@
 {
-  "name": "mi-proyecto",
+  "name": "azure-sql-vercel-api",
   "version": "1.0.0",
-  "description": "Un ejemplo de proyecto",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "type": "module",
   "dependencies": {
-    "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mssql": "^11.0.1"
+    "mssql": "^10.0.0"
   }
-
 }
